Bug 404326 - don't warn about signal args in anonymous namespace
Summary: don't warn about signal args in anonymous namespace
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-14 08:52 UTC by Milian Wolff
Modified: 2019-02-14 11:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milian Wolff 2019-02-14 08:52:41 UTC
namespace {
struct Foo{};
}

Using this type in a signal is possible when using the new-style connects. Clazy warns about it though, but there is no way to actually fix the warning:

=> signal arguments need to be fully-qualified (const (anonymous namespace)::Foo instead of const Foo)

clazy version: 1.5
clang version: 7.0.1
Comment 1 Sergio Martins 2019-02-14 11:10:06 UTC
Git commit 57b7234d0bca45738ae1b9cd8e5ed8348c27bc64 by Sergio Martins.
Committed on 14/02/2019 at 11:08.
Pushed by smartins into branch '1.5'.

fully-qualified-moc-types: Don't warn for anonymous namespaces

M  +10   -0    src/checks/level0/fully-qualified-moc-types.cpp
M  +13   -0    tests/fully-qualified-moc-types/main.cpp

https://commits.kde.org/clazy/57b7234d0bca45738ae1b9cd8e5ed8348c27bc64