fully-qualified-moc-types: Don't warn for anonymous namespaces

BUG: 404326